<resources>
    <string name="app_name">Notes App</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="data_to_fragment_2">Enter Data to Fragment 2</string>
    <string name="data_to_fragment_1">Enter Data to Fragment 1</string>
    <string name="send_data_to_fragment_1">Send Data to Fragment 1</string>
    <string name="send_data_to_fragment_2">Send Data to Fragment 2</string>
    <string name="test_text">Test Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>