<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/fragment_2"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/dataFrom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="26sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/fragment2Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:ems="10"
        android:hint="@string/data_to_fragment_1"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/sendData2btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_data_to_fragment_1"
        android:backgroundTint="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="260dp" />

</RelativeLayout>